# modern_opengl_programs

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
GLFWBoilerplate/: CMakeLists.txt
GLFWBoilerplate/src/: Main.cpp
Projects/3DCubeScene/: CMakeLists.txt
Projects/3DCubeScene/res/: CubeFiguring.txt  basis_fragment_shader.frag  basis_vertex_shader.vert  cube_fragment_shader.frag  cube_vertex_shader.vert
Projects/3DCubeScene/src/: Main.cpp
Projects/BasicDiffuseMapDemo/: CMakeLists.txt
Projects/BasicDiffuseMapDemo/res/: cube_fragment_shader.frag  cube_vertex_shader.vert
Projects/BasicDiffuseMapDemo/src/: Main.cpp
Projects/BasicGLSLTestbench/: CMakeLists.txt
Projects/BasicGLSLTestbench/res/: fragment_shader.frag  vertex_shader.vert
Projects/BasicGLSLTestbench/src/: Main.cpp
Projects/BasicLightingDemo/: CMakeLists.txt
Projects/BasicLightingDemo/res/: cube_gouraud_fragment_shader.frag  cube_gouraud_vertex_shader.vert  cube_phong_fragment_shader.frag  cube_phong_vertex_shader.vert  light_source_fragment_shader.frag  light_source_vertex_shader.vert
Projects/BasicLightingDemo/src/: Main.cpp
Projects/BasicTextureTestbench/: CMakeLists.txt
Projects/BasicTextureTestbench/res/: fragment_shader.frag  vertex_shader.vert
Projects/BasicTextureTestbench/src/: Main.cpp
Projects/SimpleDrawing/: CMakeLists.txt
Projects/SimpleDrawing/src/: Main.cpp
Projects/TerrainTest/: CMakeLists.txt
Projects/TerrainTest/res/: cartesian_plane_fragment_shader.frag  cartesian_plane_vertex_shader.vert  terrain_fragment_shader.frag  terrain_vertex_shader.vert
Projects/TerrainTest/src/: CartesianPlane.cpp  CartesianPlane.h  Main.cpp  PerlinTerrainMesh.cpp  PerlinTerrainMesh.h  Player.cpp  Player.h
Projects/UnequalCirclePacking/: CMakeLists.txt
Projects/UnequalCirclePacking/res/: simple_position_vertex_shader.vert
Projects/UnequalCirclePacking/src/: Circle.cpp  Circle.h  ImGui_GLFW_GLEW_OpenGL_Window.cpp  ImGui_GLFW_GLEW_OpenGL_Window.h  Main.cpp  UnequalCirclePacker.cpp  UnequalCirclePacker.h  UtilityBundle.cpp  UtilityBundle.h  UtilityEntryMenu.cpp  UtilityEntryMenu.h  imgui.ini
Projects/UtahTeapot_ModelLoadingDemo/: CMakeLists.txt
Projects/UtahTeapot_ModelLoadingDemo/res/: normal_scaled_outline_vertex_shader.vert  phong_solidmaterial_fragment_shader.frag  phong_textured_fragment_shader.frag  phong_textured_vertex_shader.vert  skybox_fragment_shader.frag  skybox_vertex_shader.vert
Projects/UtahTeapot_ModelLoadingDemo/res/GenericTexturedBlock/: TexturedBlock.blend  TexturedBlock.blend1  TexturedBlock.mtl
Projects/UtahTeapot_ModelLoadingDemo/res/GlobeTheatreModel/: GlobeTheatre_NewModel.blend  GlobeTheatre_NewModel.blend1  GlobeTheatre_NewModel.mtl
Projects/UtahTeapot_ModelLoadingDemo/src/: Main.cpp
SharedGLClasses/: CMakeLists.txt
SharedGLClasses/headers/: Camera.h  Cubemap.h  Model.h  Shader.h  Texture.h
SharedGLClasses/sources/: Camera.cpp  Model.cpp  Shader.cpp  Texture.cpp
